--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ dependencies = [
 dev = ["pytest>=7", "pytest-cov", "ruff"]
 verify = ["z3-solver>=4.12"]
 
+[project.scripts]
+akili-serve = "akili.api.serve:main"
+
 [tool.setuptools.packages.find]
 where = ["src"]
 
