--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
 # Copy to .env and set your key. Required for Docker and for local API (Gemini).
-GOOGLE_API_KEY=your_google_api_key_here
+GOOGLE_API_KEY=your_key_here
 
 # Optional: override SQLite path (default: akili.db in current directory)
 # AKILI_DB_PATH=/data/akili.db
+
+# Firebase (for frontend login). Get from Firebase Console → Project settings → General.
+# Vite loads from repo root when you run npm run dev from frontend/ (see vite.config envDir).
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
