--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ where = ["src"]
 line-length = 100
 target-version = "py311"
 
+[tool.ruff.format]
+quote-style = "double"
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 pythonpath = ["src"]
