--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 # Akili — API + frontend. Requires .env with GOOGLE_API_KEY.
 # Run: docker compose up --build
-# Then open http://localhost:3000
+# UI: http://localhost:3001  |  API docs: http://localhost:8001/docs
 
 services:
   api:
     build: .
     ports:
-      - "8000:8000"
+      - "8001:8000"
     env_file:
       - .env
     environment:
@@ -23,7 +23,7 @@ services:
   frontend:
     build: ./frontend
     ports:
-      - "3000:3000"
+      - "3001:3000"
     environment:
       - VITE_PROXY_TARGET=http://api:8000
     depends_on:
