--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 pydantic>=2.0
 fastapi>=0.100
 uvicorn[standard]>=0.22
+python-multipart>=0.0.6
 google-generativeai>=0.3
 pymupdf>=1.23
 pdf2image>=1.16
