--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 # Akili — API + frontend. Requires .env with GOOGLE_API_KEY.
 # Run: docker compose up --build
-# UI: http://localhost:3001  |  API docs: http://localhost:8001/docs
+# UI: http://localhost:3001  |  API docs: http://localhost:8000/docs
 
 services:
   api:
     build: .
     ports:
-      - "8001:8000"
+      - "8000:8000"
     env_file:
       - .env
     environment:
@@ -24,8 +24,13 @@ services:
     build: ./frontend
     ports:
       - "3001:3000"
+    env_file:
+      - .env
     environment:
       - VITE_PROXY_TARGET=http://api:8000
+    volumes:
+      # Mount .env so Vite can load VITE_* vars (dev server reads from file)
+      - ./.env:/app/.env:ro
     depends_on:
       api:
         condition: service_healthy
