Fixed more docker errors, added testing

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ GOOGLE_API_KEY=your_key_here
 # Optional: override SQLite path (default: akili.db in current directory)
 # AKILI_DB_PATH=/data/akili.db
 
+# Optional: set to 1 to include full error messages in API responses (e.g. ingest 500)
+# AKILI_DEBUG=1
+
 # Firebase (for frontend login + analytics). Get from Firebase Console → Project settings → General.
 # Vite loads from repo root when you run npm run dev from frontend/ (see vite.config envDir).
 VITE_FIREBASE_API_KEY=
