--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,4 +98,5 @@ jobs:
           VITE_FIREBASE_STORAGE_BUCKET: ''
           VITE_FIREBASE_MESSAGING_SENDER_ID: ''
           VITE_FIREBASE_APP_ID: ''
+          VITE_FIREBASE_MEASUREMENT_ID: ''
 
