--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,11 +27,11 @@ dependencies = [
     "google-generativeai>=0.3",
     "pymupdf>=1.23",
     "pdf2image>=1.16",
-    "firebase-admin>=6.0",
 ]
 
 [project.optional-dependencies]
 dev = ["pytest>=7", "pytest-cov", "ruff"]
+auth = ["firebase-admin>=6.0"]
 verify = ["z3-solver>=4.12"]
 
 [project.scripts]
