--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ GOOGLE_API_KEY=your_key_here
 # Optional: max upload size for PDF ingest in bytes (default 100MB).
 # AKILI_MAX_UPLOAD_BYTES=104857600
 
+# Optional: Gemini 429 handling. Ingest does one API call per PDF page and retries on rate limit.
+# AKILI_GEMINI_MAX_RETRIES=4          # retries per page (default 4)
+# AKILI_GEMINI_BACKOFF_BASE=4.0        # base seconds for exponential backoff (default 4)
+# AKILI_GEMINI_PAGE_DELAY_SECONDS=2.0  # seconds to wait between pages to avoid bursting (default 2)
+
 # Firebase (for frontend login + analytics). Get from Firebase Console → Project settings → General.
 # Vite loads from repo root when you run npm run dev from frontend/ (see vite.config envDir).
 VITE_FIREBASE_API_KEY=
