--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = ["pytest>=7", "pytest-cov", "ruff"]
+dev = ["pytest>=7", "pytest-cov", "ruff", "flake8", "flake8-pyproject"]
 auth = ["firebase-admin>=6.0"]
 verify = ["z3-solver>=4.12"]
 
@@ -46,6 +46,10 @@ target-version = "py311"
 
 [tool.ruff.format]
 quote-style = "double"
+
+[tool.flake8]
+max-line-length = 100
+exclude = [".git", "__pycache__", ".venv", "build", "dist"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
