--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ GOOGLE_API_KEY=your_key_here
 # Optional: max upload size for PDF ingest in bytes (default 100MB).
 # AKILI_MAX_UPLOAD_BYTES=104857600
 
+# Optional: Gemini model for extraction (default: gemini-2.0-flash). Use Gemini 3 when available.
+# AKILI_GEMINI_MODEL=gemini-2.0-flash
+# AKILI_GEMINI_MODEL=gemini-3-flash-preview
+# AKILI_GEMINI_MODEL=gemini-3-pro-preview
+
 # Optional: Gemini 429 handling. Ingest does one API call per PDF page and retries on rate limit.
 # AKILI_GEMINI_MAX_RETRIES=4          # retries per page (default 4)
 # AKILI_GEMINI_BACKOFF_BASE=4.0        # base seconds for exponential backoff (default 4)
