Documentation changes to more accurately reflect project scope

--- a/.env.example
+++ b/.env.example
@@ -16,8 +16,9 @@ GOOGLE_API_KEY=your_key_here
 # Optional: max upload size for PDF ingest in bytes (default 100MB).
 # AKILI_MAX_UPLOAD_BYTES=104857600
 
-# Optional: Gemini model for extraction (default: gemini-2.0-flash). Use Gemini 3 when available.
-# AKILI_GEMINI_MODEL=gemini-2.0-flash
+# Optional: Gemini model for extraction (default: gemini-3.0-flash).
+# Gemini 3 excels at document vision, structured output, and coordinate-grounded extraction for technical PDFs.
+# AKILI_GEMINI_MODEL=gemini-3.0-flash
 # AKILI_GEMINI_MODEL=gemini-3-flash-preview
 # AKILI_GEMINI_MODEL=gemini-3-pro-preview
 
