Documentation changes and error correction

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,10 @@ GOOGLE_API_KEY=your_key_here
 # AKILI_GEMINI_BACKOFF_BASE=4.0        # base seconds for exponential backoff (default 4)
 # AKILI_GEMINI_PAGE_DELAY_SECONDS=2.0  # seconds to wait between pages to avoid bursting (default 2)
 
+# Optional: Shadow Formatting (query-time natural-language phrasing of verified answers).
+# Timeout in seconds for the Gemini format call; on timeout/failure the UI shows the raw answer.
+# AKILI_FORMAT_TIMEOUT_SEC=2.5
+
 # Firebase (for frontend login + analytics). Get from Firebase Console → Project settings → General.
 # Vite loads from repo root when you run npm run dev from frontend/ (see vite.config envDir).
 VITE_FIREBASE_API_KEY=
