Gemini model update and documentation changes

--- a/.env.example
+++ b/.env.example
@@ -16,16 +16,19 @@ GOOGLE_API_KEY=your_key_here
 # Optional: max upload size for PDF ingest in bytes (default 100MB).
 # AKILI_MAX_UPLOAD_BYTES=104857600
 
-# Optional: Gemini model for extraction (default: gemini-3.0-flash).
-# Gemini 3 excels at document vision, structured output, and coordinate-grounded extraction for technical PDFs.
-# AKILI_GEMINI_MODEL=gemini-3.0-flash
-# AKILI_GEMINI_MODEL=gemini-3-flash-preview
+# Optional: Gemini model for extraction (default: gemini-3-pro-preview).
+# Gemini 3 Pro excels at document vision, structured output, and coordinate-grounded extraction for technical PDFs.
+# Valid model IDs: gemini-3-pro-preview, gemini-3-flash-preview, gemini-2.5-pro, gemini-2.5-flash (see https://ai.google.dev/gemini-api/docs/models).
 # AKILI_GEMINI_MODEL=gemini-3-pro-preview
+# AKILI_GEMINI_MODEL=gemini-3-flash-preview
+# AKILI_GEMINI_MODEL=gemini-2.5-flash
 
 # Optional: Gemini 429 handling. Ingest does one API call per PDF page and retries on rate limit.
-# AKILI_GEMINI_MAX_RETRIES=4          # retries per page (default 4)
-# AKILI_GEMINI_BACKOFF_BASE=4.0        # base seconds for exponential backoff (default 4)
-# AKILI_GEMINI_PAGE_DELAY_SECONDS=2.0  # seconds to wait between pages to avoid bursting (default 2)
+# Higher values = fewer skipped pages but slower ingest.
+# AKILI_GEMINI_MAX_RETRIES=6          # retries per page before skipping (default 6)
+# AKILI_GEMINI_BACKOFF_BASE=8.0        # base seconds for exponential backoff between retries (default 8)
+# AKILI_GEMINI_PAGE_DELAY_SECONDS=4.0  # seconds between pages to avoid bursting (default 4)
+# AKILI_GEMINI_429_COOLDOWN_SECONDS=60  # after a page hits 429, wait this long before next page (default 60)
 
 # Optional: Shadow Formatting (query-time natural-language phrasing of verified answers).
 # Timeout in seconds for the Gemini format call; on timeout/failure the UI shows the raw answer.
